; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_proresenc_anatoliy.c_put_alpha_run.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_proresenc_anatoliy.c_put_alpha_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @put_alpha_run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_alpha_run(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %21

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @put_bits(i32* %8, i32 1, i32 0)
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %10, 16
  br i1 %11, label %12, label %16

12:                                               ; preds = %7
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @put_bits(i32* %13, i32 4, i32 %14)
  br label %20

16:                                               ; preds = %7
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @put_bits(i32* %17, i32 15, i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  br label %24

21:                                               ; preds = %2
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @put_bits(i32* %22, i32 1, i32 1)
  br label %24

24:                                               ; preds = %21, %20
  ret void
}

declare dso_local i32 @put_bits(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
